<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fullscreen_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionSetupActivity"
    android:padding="10dip" >
    
        <TableLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        <TextView
            android:id="@+id/textViewConnectionType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_type_text"/>
            
        <Spinner 
            android:id="@+id/spinnerConnectionType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/connection_types"/>
            
            <EditText
                android:id="@+id/hostname"
                android:hint="@string/connection_setup_host_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10"
                android:inputType="textVisiblePassword" >

                <requestFocus />
            </EditText>
            
            <EditText
                android:id="@+id/vmname"
                android:hint="@string/connection_setup_vm_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10"
                android:inputType="textVisiblePassword" />
            
            <EditText
                android:id="@+id/user"
                android:hint="@string/connection_setup_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="10"
                android:inputType="textVisiblePassword" />
                        
            <EditText
                android:id="@+id/password"
                android:hint="@string/connection_setup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true"
                android:inputType="textPassword" />
            
            <Button
                android:id="@+id/advancedSettingsButton"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/advanced_settings" />
            
            <Button
                android:id="@+id/saveButton"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button" />
        </TableLayout>
</FrameLayout>