<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/fullscreen_content"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:padding="10dip" >
	    
	        <TableLayout
	            android:id="@+id/fullscreen_content_controls"
	            style="?buttonBarStyle"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="top|center_horizontal"
	            android:background="@color/black_overlay"
	            android:orientation="horizontal"
	            tools:ignore="UselessParent" >
	            
	            <Spinner
                android:id="@+id/layoutMaps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
	            
			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="5dip"
			        android:orientation="horizontal">
		            <ToggleButton
		                android:id="@+id/toggleAudioPlayback"
		                android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:onClick="toggleAudioPlaybackSetting"
		                android:gravity="left|center_vertical"/>
			        <TextView
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
	                    android:text="@string/audio"
	                    android:gravity="right|center_vertical"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
			    </LinearLayout>
			    
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:orientation="horizontal">
                    <ToggleButton
                        android:id="@+id/toggleUsbEnabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleUsbEnabledSetting"
                        android:gravity="left|center_vertical"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usb"
                        android:gravity="right|center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
                
			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="5dip"
			        android:orientation="horizontal">
		            <ToggleButton
		                android:id="@+id/toggleAutoRotation"
		                android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:onClick="toggleAutoRotation"
		                android:gravity="left|center_vertical"/>
			        <TextView
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
	                    android:text="@string/auto_rotation"
	                    android:gravity="right|center_vertical"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
			    </LinearLayout>
	            
			    <LinearLayout
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:padding="5dip"
			        android:orientation="horizontal">
		            <ToggleButton
		                android:id="@+id/toggleAutoRequestDisplayResolution"
		                android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:onClick="toggleAutoRequestDisplayResolution"
		                android:gravity="left|center_vertical"/>
			        <TextView
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
	                    android:text="@string/auto_request_new_res"
	                    android:gravity="right|center_vertical"
			            android:textAppearance="?android:attr/textAppearanceMedium" />
			    </LinearLayout>
			    		    
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:orientation="horizontal">
                    <ToggleButton
                        android:id="@+id/toggleSslStrict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleSslStrict"
                        android:gravity="left|center_vertical"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ssl_strict"
                        android:gravity="right|center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:orientation="horizontal">
                    <ToggleButton
                        android:id="@+id/toggleUsingCustomOvirtCa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="toggleUsingCustomOvirtCa"
                        android:gravity="left|center_vertical"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ca_ovirt_use_custom"
                        android:gravity="right|center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
	                
	            <LinearLayout
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:padding="5dip"
	                android:orientation="horizontal">
		            <Button
	                    android:id="@+id/buttonManageOvirtCa"
	                    android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
	                    style="?buttonBarButtonStyle"
		                android:text="@string/ca_ovirt_manage"
		                android:onClick="showManageOvirtCaDialog"/>
	            </LinearLayout>
	        </TableLayout>
	</FrameLayout>
</ScrollView>